# clox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c
app/: CMakeLists.txt  common.h  main.c
app/bytecode/: chunk.c  chunk.h  object.c  object.h  value.c  value.h
app/bytecode/debug/: debug.c  debug.h
app/compiler/: compiler.c  compiler.h
app/scanner/: scanner.c  scanner.h  token.h
app/utils/: array.h  files.c  files.h  mem.c  mem.h  memory.c  memory.h  table.c  table.h
app/vm/: vm.c  vm.h
